# tw-stock-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  railway.toml  requirements-finmind.txt  requirements.txt  start.sh
tw_stock_analyzer/: __init__.py  __main__.py  cli.py
tw_stock_analyzer/analyzer/: __init__.py  engine.py  scoring.py
tw_stock_analyzer/backtest/: __init__.py  engine.py  metrics.py  strategies.py
tw_stock_analyzer/dashboard/: __init__.py  app.py  backtest_service.py  charts.py  equity_chart.py  interactive_chart.py  launcher.py  main_force_chart.py  market_views.py  screener_service.py  service.py  shareholding_chart.py
tw_stock_analyzer/data/: __init__.py  broker_main_force.py  fetcher.py  finmind_client.py  finmind_daily_fetcher.py  finmind_intraday_fetcher.py  fundamentals.py  institutional.py  market_context.py  models.py  news_provider.py  shareholding.py  social.py  stock_market_registry.py  stock_names.py  symbol_utils.py  themes.py  twse_fetcher.py  wantgoo_fetcher.py
tw_stock_analyzer/indicators/: __init__.py  chart_timeframe.py  fibonacci.py  ta_pure.py  technical.py
tw_stock_analyzer/notifications/: __init__.py  resonance_alert.py  telegram.py
tw_stock_analyzer/predictor/: __init__.py  model.py  resonance.py  signals.py
tw_stock_analyzer/screener/: __init__.py  engine.py  filters.py  models.py  universe.py
