[project]
name = "tw-stock-analyzer"
version = "0.1.0"
description = "台灣股票技術分析與價格預測工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "ta>=0.11.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]

[project.scripts]
tw-stock = "tw_stock_analyzer.cli:main"
tw-stock-dashboard = "tw_stock_analyzer.dashboard.launcher:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tw_stock_analyzer*"]
